--- a/style.css
+++ b/style.css
@@ -1,5 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Poppins, sans-serif;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 0;
+    color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url(./img/bg.webp);
+    background-position: center;
+    background-size: cover;
+}
+
+header h1 {
+    font-size: 6em;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.filter-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 24px;
+    padding: 30px 0;
+    background-color: #1f1f1f;
+}
+
+.filter {
+    display: flex;
+    flex-direction: column;
+}
+
+.filter label {
+    margin-bottom: 4px;
+    color: white;
+}
+
+select {
+    width: 200px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #1f1f1f;
 }
