bunch of js and css

--- a/style.css
+++ b/style.css
@@ -50,3 +50,95 @@ select {
     border-radius: 8px;
     border: 1px solid #1f1f1f;
 }
+
+.results {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    padding: 30px 60px 120px 60px;
+}
+
+.no-results {
+    text-align: center;
+    grid-column: 1/-1;
+}
+
+.property {
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    transition: all 0.3s ease;
+}
+
+.property:hover {
+    scale: 1.1;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.property-image {
+    width: 100%;
+    object-fit: cover;
+    height: 250px;
+}
+
+.property-details {
+    padding: 16px;
+}
+
+.property-details h2 {
+    margin: 8px 0;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.property-details p {
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.more-details {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px 0;
+}
+
+.more-details h4 {
+    color: #33924A;
+}
+
+.property-amenities {
+    display: flex;
+    gap: 8px;
+}
+
+.property-amenities p {
+    font-weight: 400;
+    color: rgb(155, 162, 169);
+    font-size: 16px;
+}
+
+/* Swiper */
+.swiper {
+    width: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    height: 250px;
+}
+
+.swiper-pagination {
+    padding: 4px;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+}
+
+.swiper-pagination-bullet {
+    background: antiquewhite;
+    width: 16px;
+    height: 16px;
+}
