--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ select {
     border: 1px solid #1f1f1f;
 }
 
+.sorting-text {
+    text-align: center;
+    font-weight: 300;
+    font-size: 1em;
+}
+
 .results {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -141,4 +147,128 @@ select {
     background: antiquewhite;
     width: 16px;
     height: 16px;
+}
+
+/* modal styling */
+dialog {
+    z-index: 10;
+    position: fixed;
+    width: 40%;
+    height: 60vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 16px;
+    border: none;
+    position: relative;
+    padding-bottom: 42px;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+}
+
+body.modal-open {
+    overflow: hidden; /*prevents scrolling while modal is open */
+}
+
+#closeModal {
+    position: fixed;
+    top: 16px;
+    right: 16px;
+    border: none;
+    background-color: #33924A;
+    border-radius: 50%;
+    padding: 4px 12px;
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.modal-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-contents img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.modal-contents h2 {
+    margin-top: 30px;
+    margin-bottom: 8px;
+}
+
+.modal-contents h4 {
+    color: #33924A;
+    font-size: 24px;
+    margin-top: 16px;
+}
+
+.modal-amenities {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 30px;
+    margin-top: 16px;
+}
+
+.property-description {
+    font-weight: 300;
+    margin-top: 16px;
+    padding: 0px 60px;
+    line-height: 150%;
+}
+
+.booking-button {
+    padding: 12px 16px;
+    margin-top: 30px;
+    background-color: #33924A;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    font-size: 16px;
+}
+
+/* media queries */
+
+@media only screen and (max-width: 1200px) {
+    header h1 {
+        font-size: 4em;
+        text-align: center;
+    }
+    .filter-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    select {
+        width: 600px;
+    }
+    .results {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    dialog {
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .results {
+        grid-template-columns: 1fr;
+    }    
+    select {
+        max-width: 300px;
+    }
+    dialog {
+        height: 80vh;
+    }
+    .property-description {
+        padding: 0 32px;
+    }
 }
